# Street-food-api

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  tox.ini
street_food_api/conf/: api.py  asgi.py  celery.py  urls.py  utils.py  wsgi.py
street_food_api/conf/settings/: base.py  local.py  production.py  test.py
street_food_api/locations/: models.py  serializers.py  tasks.py
street_food_api/locations/migrations/: 0001_initial.py  0002_auto_20210122_1040.py  0003_auto_20210122_1045.py  0004_auto_20210131_1152.py
street_food_api/trucks/: admin.py  apps.py  filters.py  managers.py  middlewares.py  models.py  permissions.py  serializers.py  signals.py  throttle.py  views.py
street_food_api/trucks/fixtures/: payment_method.json
street_food_api/trucks/migrations/: 0001_initial.py  0002_auto_20210120_0820.py  0003_auto_20210121_1053.py  0004_truck_city.py  0005_auto_20210302_1103.py
street_food_api/users/migrations/: 0001_initial.py
tests/: conftest.py  factories.py  test_api.py  test_celery.py  test_models.py  test_serializers.py  test_throttle.py  test_views.py
